Bug 1905000 - [devtools] Prevent scrollbar on webextension inspector sidebar. r=devtools-reviewers,jdescottes.
Differential Revision: https://phabricator.services.mozilla.com/D215056

--- a/devtools/client/themes/inspector.css
+++ b/devtools/client/themes/inspector.css
@@ -205,6 +205,11 @@ iframe {
 .inspector-tabpanel.extension-sidebar {
   height: 100%;
   overflow-y: auto;
+
+  /* Prevent overflow issue (Bug 1905000) */
+  iframe.inspector-extension-sidebar-page {
+    display: block;
+  }
 }
 
 /* Used for both the computed view and the rule view, to truncate extremely
